--- a/application/EUIPrediction.ipynb
+++ b/application/EUIPrediction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#predition EUI using regression algorithms"
+    "#Predition EUI using regression algorithms. First of all, load the dataset."
    ]
   },
   {
@@ -16,7 +16,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please select a database to continue the analysis\n"
+      "Please select a database to continue the analysis\n",
+      "Dataset in C:/Users/tzcha/Documents/aibpd/resources/CBECS2012.csv has been loaded!\n"
      ]
     }
    ],
@@ -26,7 +27,38 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "db=Database()\n",
-    "CBECS_DF=db.select()\n",
+    "CBECS_DF=db.select()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn.impute'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-b67da589eb33>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimpute\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSimpleImputer\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mimp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSimpleImputer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmissing_values\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnan\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstrategy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'mean'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mimp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mCBECS_DF\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn.impute'"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "imp = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
+    "imp.fit(CBECS_DF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#preprocessing for regression\n",
     "prep4eui=PreprocessingCBECS()\n",
     "CBECS_DF=prep4eui.prep4EUIReg(CBECS_DF)"
@@ -34,18 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\tzcha\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "CBECS_DF=CBECS_DF[CBECS_DF['principleActivity']>=2][CBECS_DF['principleActivity']<3]\n",
     "CBECS_DF=CBECS_DF.dropna()\n",
@@ -60,7 +83,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.datasetDF=CBECS_DF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "datasetDF has been saved to C:/Users/tzcha/Documents/aibpd/resources/CBECS4Reg.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "db.save('CBECS4Reg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,11 +125,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input a value3\n"
+     ]
+    }
+   ],
    "source": [
-    "db.datasetDF=corrMattDF"
+    "x=input('input a value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2.0, 0.0, 1.0]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boroughs = list(boroughs[boroughs.values > 100].index)\n",
+    "boroughs"
    ]
   },
   {
